--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,12 +8,18 @@
       <span class="icon-bar"></span>
     </button>
     <%= link_to "EVC", root_path, class: "navbar-brand" %>
+    </div>
 
   <!-- Collect the nav links, forms, and other content for toggling -->
   <div class="collapse navbar-collapse navbar-ex1-collapse">
     <ul class="nav navbar-nav navbar-right">
-      <li><%= link_to "Home", root_path %></li>
-      <li><%= link_to "Profile", profile_path %></li> 
+      
+        <li><%= link_to "Profile", profile_path %></li>
+        <% if user_signed_in? %>
+          <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
+        <% else %>
+          <li><%= link_to "Sign in", new_user_session_path %></li>
+        <% end %>
     </ul>
   </div><!-- /.navbar-collapse -->
 </nav>
